:bento: Update web icon

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ env:
 extends:
   - plugin:vue/essential
   - airbnb-base
+  - prettier
 parserOptions:
   ecmaVersion: latest
   parser: '@typescript-eslint/parser'
