--- a/package.json
+++ b/package.json
@@ -6,42 +6,39 @@
     "build": "vite build",
     "dev": "vite --host",
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
-    "preview": "vite preview"
+    "preview": "vite preview "
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@types/node": "^17.0.19",
+    "axios": "^0.26.0",
     "ethers": "^5.5.4",
-    "ipfs-http-client": "^56.0.1",
+    "form-data": "^4.0.0",
     "naive-ui": "^2.25.3",
     "vfonts": "^0.0.3",
     "vue": "^3.2.25",
     "vue-dapp": "^0.4.7",
     "vue-i18n": "9",
-    "buffer": "^6.0.3",
-    "process": "^0.11.10",
-    "util": "^0.12.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^3.0.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-shared-utils": "^5.0.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
+    "process": "^0.11.10",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0",
+    "util": "^0.12.4",
+    "vite": "^2.8.5",
     "vue-cli-plugin-i18n": "~2.3.1",
     "vue-tsc": "^0.29.8"
   },
