:sparkles: footer info

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^0.26.0",
     "ethers": "^5.5.4",
     "form-data": "^4.0.0",
+    "pdfjs-dist": "^2.13.216",
     "vue": "^3.2.25",
     "vue-dapp": "^0.4.7",
     "vue-i18n": "9",
     "vue-router": "4",
+    "vue3-pdfjs": "^0.1.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
