--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.0",
     "ethers": "^5.5.4",
     "form-data": "^4.0.0",
+    "mitt": "^3.0.0",
     "pdfjs-dist": "^2.13.216",
     "vue": "^3.2.25",
     "vue-dapp": "^0.4.7",
