:sparkles: Switch to pinia

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "form-data": "^4.0.0",
     "mitt": "^3.0.0",
     "pdfjs-dist": "^2.13.216",
+    "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-dapp": "^0.4.7",
     "vue-i18n": "9",
