--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@types/node": "^17.0.19",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.0",
-    "axios-retry": "^3.2.4",
     "ethers": "^5.5.4",
     "form-data": "^4.0.0",
     "mitt": "^3.0.0",
@@ -21,6 +21,7 @@
     "vue": "^3.2.25",
     "vue-dapp": "^0.4.7",
     "vue-i18n": "9",
+    "vue-request": "^1.2.4",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "naive-ui": "^2.25.3",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
+    "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "util": "^0.12.4",
     "vfonts": "^0.0.3",
