:sparkles: Profile result page and auto switch network

--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
   "dependencies": {
     "@types/node": "^17.0.19",
     "animate.css": "^4.1.1",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "axios-retry": "^3.2.4",
-    "ethers": "^5.5.4",
+    "ethers": "^5.6.0",
     "form-data": "^4.0.0",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.11",
-    "vue": "^3.2.25",
-    "vue-dapp": "^0.4.7",
+    "pinia": "^2.0.12",
+    "vue": "^3.2.31",
+    "vue-dapp": "^0.4.8",
     "vue-i18n": "9",
     "vue-request": "^1.2.4",
     "vue-router": "4"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "@vitejs/plugin-vue": "^2.2.0",
-    "@vue/cli-shared-utils": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/cli-shared-utils": "^5.0.3",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "naive-ui": "^2.25.3",
-    "prettier": "^2.5.1",
+    "naive-ui": "^2.26.4",
+    "prettier": "^2.6.0",
     "process": "^0.11.10",
     "sass": "^1.49.9",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.2",
     "util": "^0.12.4",
     "vfonts": "^0.0.3",
-    "vite": "^2.8.5",
+    "vite": "^2.8.6",
     "vite-plugin-compression": "^0.5.1",
     "vue-cli-plugin-i18n": "~2.3.1",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.33.2-patch.1"
   },
   "packageManager": "yarn@1.22.17"
 }
