:bug: Fix add chain

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "bsctest": "vite --mode bsctest --host ",
+    "bsctest": "vite --mode bsctest",
     "dev": "vite --host",
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
-    "preview": "vite preview "
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@types/node": "^17.0.19",
