--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "bsctest": "vite --mode bsctest",
+    "bsctest": "vite --mode bsctest --host",
     "dev": "vite --host",
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "@types/node": "^17.0.19",
+    "@types/node": "^17.0.21",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "axios-retry": "^3.2.4",
-    "ethers": "^5.6.0",
+    "ethers": "^5.6.1",
     "form-data": "^4.0.0",
     "mitt": "^3.0.0",
     "pinia": "^2.0.12",
     "vue": "^3.2.31",
     "vue-dapp": "^0.4.8",
-    "vue-i18n": "9",
+    "vue-i18n": "^9.1.9",
     "vue-request": "^1.2.4",
-    "vue-router": "4"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^4.0.4",
@@ -46,8 +46,8 @@
     "vfonts": "^0.0.3",
     "vite": "^2.8.6",
     "vite-plugin-compression": "^0.5.1",
-    "vue-cli-plugin-i18n": "~2.3.1",
-    "vue-tsc": "^0.33.2-patch.1"
+    "vite-plugin-pwa": "^0.11.13",
+    "vue-cli-plugin-i18n": "~2.3.1"
   },
   "packageManager": "yarn@1.22.17"
 }
