--- a/package.json
+++ b/package.json
@@ -4,49 +4,50 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "bsctest": "vite --mode bsctest --host",
+    "build:bsctest": "vite build --mode bsctest",
     "dev": "vite --host",
+    "dev:bsctest": "vite --mode bsctest --host",
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.34",
     "animate.css": "^4.1.1",
-    "axios": "^0.26.1",
-    "axios-retry": "^3.2.4",
-    "ethers": "^5.6.1",
+    "axios": "^0.27.2",
+    "axios-retry": "^3.2.5",
+    "ethers": "^5.6.6",
     "form-data": "^4.0.0",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.12",
-    "vue": "^3.2.31",
+    "pinia": "^2.0.14",
+    "vue": "^3.2.33",
     "vue-dapp": "^0.4.8",
-    "vue-i18n": "^9.1.9",
-    "vue-request": "^1.2.4",
-    "vue-router": "^4.0.14"
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/cli-shared-utils": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/cli-shared-utils": "^5.0.4",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "eslint": "^8.11.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "naive-ui": "^2.26.4",
-    "prettier": "^2.6.0",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "naive-ui": "^2.29.0",
+    "prettier": "^2.6.2",
     "process": "^0.11.10",
-    "sass": "^1.49.9",
-    "typescript": "^4.6.2",
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4",
     "util": "^0.12.4",
     "vfonts": "^0.0.3",
-    "vite": "^2.8.6",
+    "vite": "^2.9.9",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-pwa": "^0.11.13",
+    "vite-plugin-pwa": "^0.12.0",
     "vue-cli-plugin-i18n": "~2.3.1"
   },
   "packageManager": "yarn@1.22.17"
